feat: update to embedding product and customers.