@@ -1,7 +1,9 @@
 package com.breno.intellibuy.services.ai;
 
 
+import com.breno.intellibuy.model.Customer;
 import com.breno.intellibuy.model.Product;
+import com.breno.intellibuy.repository.CustomerRepository;
 import com.breno.intellibuy.repository.ProductRepository;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.chat.prompt.Prompt;
@@ -14,48 +16,76 @@ import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
-public class ProductEmbeddingService {
+public class DataEmbeddingService {
 
     private final ProductRepository productRepository;
+    private final CustomerRepository customerRepository;
     private final VectorStore vectorStore;
     private final ChatClient chatClient;
 
     @Value("classpath:/prompts/system-message.st")
     private Resource systemMessage;
 
-    public ProductEmbeddingService(ProductRepository productRepository, VectorStore vectorStore, ChatClient.Builder chatClientBuilder) {
+    public DataEmbeddingService(
+            ProductRepository productRepository,
+            CustomerRepository customerRepository,
+            VectorStore vectorStore,
+            ChatClient.Builder chatClientBuilder) {
         this.productRepository = productRepository;
+        this.customerRepository = customerRepository;
         this.vectorStore = vectorStore;
         this.chatClient = chatClientBuilder.build();
     }
 
     @Transactional
-    public void ingestAllProductsToVectorStore() {
+    public void ingestAllDataToVectorStore() {
         List<Product> allProducts = productRepository.findAll();
         System.out.println("Starting ingestion of " + allProducts.size() + " products to Vector Store.");
 
-        List<Document> documents = allProducts.stream().map(product -> {
+        List<Document> productDocuments = allProducts.stream().map(product -> {
             String content = String.format("Product: %s. Description: %s. Price: $%.2f.",
                     product.getName(), product.getDescription(), product.getPrice());
 
             Map<String, Object> metadata = Map.of(
+                    "type", "product",
                     "product_id", product.getId(),
                     "product_name", product.getName(),
                     "product_price", product.getPrice().doubleValue()
             );
             return new Document(content, metadata);
-        }).collect(Collectors.toList());
+        }).toList();
 
-        if (!documents.isEmpty()) {
-            vectorStore.add(documents);
-            System.out.println("Ingestion of product embeddings to Vector Store completed successfully.");
+        List<Customer> allCustomers = customerRepository.findAll();
+        System.out.println("Starting ingestion of " + allCustomers.size() + " customers to Vector Store.");
+
+        List<Document> customerDocuments = allCustomers.stream().map(customer -> {
+            String content = String.format("Customer: %s. CPF: %s. Phone: %s.",
+                    customer.getName(), customer.getCpf(), customer.getPhone());
+
+            Map<String, Object> metadata = Map.of(
+                    "type", "customer",
+                    "customer_id", customer.getId(),
+                    "customer_name", customer.getName()
+            );
+            return new Document(content, metadata);
+        }).toList();
+
+        List<Document> allDocuments = new ArrayList<>();
+        allDocuments.addAll(productDocuments);
+        allDocuments.addAll(customerDocuments);
+
+
+        if (!allDocuments.isEmpty()) {
+            vectorStore.add(allDocuments);
+            System.out.println("Ingestion of all documents to Vector Store completed successfully.");
         } else {
-            System.out.println("No products to ingest to Vector Store.");
+            System.out.println("No data to ingest to Vector Store.");
         }
     }
 
